Bug 320955 - Auto completion triggered by pasting
Summary: Auto completion triggered by pasting
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: part (other bugs)
Version First Reported In: 3.10.3
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks: 288660 316413
  Show dependency treegraph
 
Reported: 2013-06-09 12:32 UTC by Bauke
Modified: 2013-06-27 10:30 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bauke 2013-06-09 12:32:07 UTC
When pasting text in kate (using menu, ctrl+v or middle-mouse-button) , auto completion is triggered. Resulting in part of the text becoming obscured by the popup, making these parts inaccessible for the mouse, and overriding the meaning of the up, down, and enter keys. Auto completion is rarely desired when pasting text. In those rare cases, it can quite well be invoked manually. So by default it should not be triggered upon pasting text.

Reproducible: Always

Steps to Reproduce:
1. Open a new document
2. Write the following lines:
test
tests
3. copy 'test'
4. paste it on a new line
Actual Results:  
Auto completion is triggered and must be closed before the user can continue typing/pasting.

Expected Results:  
Only paste the text. Such that the line below is still visible and clickable, the down button moves the cursor down one line and enter inserts a linebreak.

Blocks bugs 288660 and 316413.
Comment 1 Dominik Haumann 2013-06-27 10:30:13 UTC
Git commit a74c0c31ffc62842df849dec53b3b5d6af11ae12 by Dominik Haumann.
Committed on 27/06/2013 at 10:27.
Pushed by dhaumann into branch 'master'.

do not auto-complete on paste

Neither auto-complete on paste (ctrl+v) nor on middle mouse button.
FIXED-IN: 4.11

M  +9    -0    part/view/kateview.cpp
M  +4    -2    part/view/kateviewinternal.cpp

http://commits.kde.org/kate/a74c0c31ffc62842df849dec53b3b5d6af11ae12