do not auto-complete on paste

Neither auto-complete on paste (ctrl+v) nor on middle mouse button.
FIXED-IN: 4.11
BUG: 320955